--- a/MicroService5/jwtDemo/jwtDemo/src/main/resources/application.properties
+++ b/MicroService5/jwtDemo/jwtDemo/src/main/resources/application.properties
@@ -1,13 +1,14 @@
-server.port=7002
-spring.application.name=JWT-GENERATOR
-jwt.secret=secret123
+
+server.port=7072
+
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mallik_db_registration
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mallik_db
 spring.datasource.username=springuser
 spring.datasource.password=ThePassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
-spring.cloud.compatibility-verifier.enabled=false
+jwt.secret=secretkey1234
 
 
+spring.application.name=JWT-SECURITY
